<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_wifi"
            android:icon="@drawable/ic_wifi_black_24dp"
            android:title="@string/nav_wifi_config" />
        <item
            android:id="@+id/nav_bluetooth"
            android:icon="@drawable/ic_bluetooth_black_24dp"
            android:title="@string/nav_blue_config" />
        <item
            android:id="@+id/nav_controls"
            android:icon="@drawable/ic_videogame_asset_black_24dp"
            android:title="@string/nav_controls" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_configuration" />
    </group>
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
